# upload_gist

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/gist_uploader/: __init__.py  __main__.py  _core.py
tests/: test_core.py
