[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gist-uploader"
version = "0.1.0"
description = "Tiny CLI & library to post/update GitHub Gists"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Nishio Hirokazu", email = "nishio.hirokazu@gmail.com"}]
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]
keywords = ["gist", "github", "cli", "upload"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/nishio/upload_gist"
Repository = "https://github.com/nishio/upload_gist"
Issues = "https://github.com/nishio/upload_gist/issues"

[project.scripts]
gist-uploader = "gist_uploader.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
